fix raw url overflow problem

--- a/Raven.Studio.Html5/Content/app.css
+++ b/Raven.Studio.Html5/Content/app.css
@@ -388,6 +388,14 @@ body {
   -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
 }
+#shellFooter li {
+  max-width: 200px;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
 #editTransformerContainer .transformer {
   height: 600px;
 }
